[gd_scene load_steps=5 format=3 uid="uid://y1ajs3pqfl4p"]

[ext_resource type="Script" path="res://scripts/ui/score_overlay.gd" id="1_ck6f8"]
[ext_resource type="LabelSettings" uid="uid://cpdhvt73q0p3u" path="res://resources/themes/border_label.tres" id="2_44l1k"]

[sub_resource type="LabelSettings" id="LabelSettings_ogutn"]
font_size = 60
font_color = Color(0.82, 0.3936, 0.3936, 1)
outline_size = 25
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kp5rf"]
font_size = 40
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[node name="ScoreOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ck6f8")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ResultLabel" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Defeat!"
label_settings = SubResource("LabelSettings_ogutn")
horizontal_alignment = 1

[node name="SummaryLabel" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Enemies killed: 12 xp
Boss killed: 50 xp"
label_settings = ExtResource("2_44l1k")
horizontal_alignment = 1
vertical_alignment = 2

[node name="TotalLabel" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Total: 62 xp"
label_settings = SubResource("LabelSettings_kp5rf")
horizontal_alignment = 1

[node name="MenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Back to menu"
